# retail-catalog-enrichment

./: README.md  docker-compose.custom.bkup.yml  docker-compose.custom.yml  docker-compose.rag.yml  docker-compose.yml  pyproject.toml
deploy/: 1_Deploy_Catalog_Enrichment.ipynb
docs/: API.md  DOCKER.md
shared/config/: config.yaml
src/backend/: config.py  main.py  policy.py  policy_library.py  vlm.py
src/ui/: package.json  pnpm-lock.yaml
src/ui/app/: page.tsx
src/ui/components/: AdvancedOptionsCard.tsx  FieldsCard.tsx  Header.tsx  ImageUploadCard.tsx
src/ui/lib/: api.ts
src/ui/types/: index.ts
tests/: conftest.py  test_policy_library_unit.py  test_policy_unit.py  test_validation.py  test_vlm_unit.py
